--- a/.gitmodules
+++ b/.gitmodules
@@ -1,3 +1,6 @@
 [submodule "catkin_ws/src/object-tracker"]
 	path = catkin_ws/src/object-tracker
 	url = git@github.com:/glynfinck/object-tracker
+[submodule "catkin_ws/src/trashbot_ai"]
+	path = catkin_ws/src/trashbot_ai
+	url = git@github.com:/KeenanMcConkey/trashbot_ai.git
