--- a/.gitmodules
+++ b/.gitmodules
@@ -10,3 +10,6 @@
 [submodule "catkin_ws/src/realsense-ros"]
 	path = catkin_ws/src/realsense-ros
 	url = git@github.com:/IntelRealSense/realsense-ros.git
+[submodule "catkin_ws/ddynamic_reconfigure"]
+	path = catkin_ws/ddynamic_reconfigure
+	url = git@github.com:/pal-robotics/ddynamic_reconfigure.git
