--- a/.gitmodules
+++ b/.gitmodules
@@ -13,3 +13,6 @@
 [submodule "catkin_ws/ddynamic_reconfigure"]
 	path = catkin_ws/ddynamic_reconfigure
 	url = git@github.com:/pal-robotics/ddynamic_reconfigure.git
+[submodule "catkin_ws/src/ddynamic_reconfigure"]
+	path = catkin_ws/src/ddynamic_reconfigure
+	url = git@github.com:/pal-robotics/ddynamic_reconfigure.git
